# ai-stock-evaluation-system

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  eslint.config.js  index.html  install_cn.ps1  package-lock.json  package.json  tailwind.config.js  tatus  tsconfig.json  vite.config.ts
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: Onboarding.tsx
src/components/app-shell/: AppShell.tsx  ChatPanel.tsx  ConversationSwitcher.tsx  Sidebar.tsx  TopBar.tsx
src/components/common/: DimensionBadges.tsx  DimensionRadarChart.tsx  EmptyState.tsx  Markdown.tsx  MiniKlineChart.tsx  RefreshButton.tsx
src/components/dashboard/: AccountSummary.tsx  AgentStatusBar.tsx  AgentTimeline.tsx  EquityCurveCard.tsx  MetricCard.tsx  PositionCard.tsx
src/domain/: account.ts  agent.ts  ai.ts  backtest.ts  chat.ts  config.ts  constants.ts  memory.ts  position.ts  trade.ts
src/lib/: format.ts  utils.ts
src/mock/: mockData.ts
src/pages/: AgentPage.tsx  DashboardPage.tsx  DataSourceSettingsPage.tsx  DecisionNotesPage.tsx  MemoryPage.tsx  ModelSettingsPage.tsx  PositionsPage.tsx  ResearchReportsPage.tsx  SettingsPage.tsx  TradesPage.tsx
src/services/: agentRunner.ts  aiGateway.ts  backtest.ts  localStore.ts  marketData.ts  notification.ts  scheduler.ts  tokenEstimator.ts  tradingCalendar.ts
src/store/: appStore.ts  types.ts
src/styles/: globals.css
开发文档/: # AI 投资助手 Agent 系统 — 学习路线.md  AI炒股系统详细计划书.md  从0到1搭建路线.md  优化建议.md  优化路线.md  简历项目经历.md  系统介绍.md  项目架构.md
(+31 files in other folders)
